@@ -13,6 +13,9 @@
      [progressmeter.c]
      don't print trailing \0; bug #709; Robert.Dahlem@siemens.com
      ok millert/deraadt@
+   - markus@cvs.openbsd.org 2003/09/23 20:41:11
+     [channels.c channels.h clientloop.c]
+     move client only agent code to clientloop.c
 
 20030930
  - (bal) Fix issues in openbsd-compat/realpath.c
@@ -1248,4 +1251,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3046 2003/10/02 06:15:15 dtucker Exp $
+$Id: ChangeLog,v 1.3047 2003/10/02 06:17:00 dtucker Exp $
